--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -18,11 +18,11 @@ repositories:
       tags:
         release: release/melodic/{package}/{version}
       url: git@github.com:ipa-rwu/ur5e_egp50.git
-      version: 1.2.5
+      version: 1.2.5-1
     source:
       type: git
-      url: git@github.com:ipa-rwu/ur5e_egp50.git
-      version: kogrob
+      url: git@github.com:ScalABLE40/wsg50-ros-pkg.git
+      version: master
     status: developed
 type: distribution
 version: 1
