--- a/melodic/doc-build.yaml
+++ b/melodic/doc-build.yaml
@@ -21,7 +21,7 @@ targets:
     apt_keys:
     - http://packages.ros.org/ros.key
   ubuntu:
-    xenial:
+    bionic:
       amd64:
 type: doc-build
 version: 1
