--- a/melodic/release-build.yaml
+++ b/melodic/release-build.yaml
@@ -17,7 +17,7 @@ targets:
     apt_keys:
     - http://packages.ros.org/ros.key
   ubuntu:
-    xenial:
+    bionic:
       amd64:
 type: release-build
 version: 1
