--- a/melodic/source-build.yaml
+++ b/melodic/source-build.yaml
@@ -18,7 +18,7 @@ targets:
     apt_keys:
     - http://packages.ros.org/ros.key
   ubuntu:
-    xenial:
+    bionic:
       amd64:
 type: source-build
 version: 1
